"""
–£–ø—Ä–æ—â–µ–Ω–Ω—ã–π State Manager - —Ç–æ—á–Ω–∞—è –∫–æ–ø–∏—è –ª–æ–≥–∏–∫–∏ –∏–∑ main.py
–¢–æ–ª—å–∫–æ 3 —Å–æ—Å—Ç–æ—è–Ω–∏—è: SLEEPING, LISTENING, PROCESSING
"""

import asyncio
import time
import threading
from typing import Optional, Callable, Dict, Any
from datetime import datetime

from .types import AppState, StateTransition, StateMetrics, StateInfo, StateConfig


class SimpleStateManager:
    """
    –£–ø—Ä–æ—â–µ–Ω–Ω—ã–π –º–µ–Ω–µ–¥–∂–µ—Ä —Å–æ—Å—Ç–æ—è–Ω–∏–π - —Ç–æ—á–Ω–∞—è –∫–æ–ø–∏—è StateManager –∏–∑ main.py
    –£–ø—Ä–∞–≤–ª—è–µ—Ç –ø–µ—Ä–µ—Ö–æ–¥–∞–º–∏ –º–µ–∂–¥—É —Å–æ—Å—Ç–æ—è–Ω–∏—è–º–∏ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è.
    –ö–∞–∂–¥–æ–µ —Å–æ—Å—Ç–æ—è–Ω–∏–µ –∑–Ω–∞–µ—Ç, –∫–∞–∫ —Ä–µ–∞–≥–∏—Ä–æ–≤–∞—Ç—å –Ω–∞ –∫–∞–∂–¥–æ–µ —Å–æ–±—ã—Ç–∏–µ.
    """
    
    def __init__(self, console=None, audio_player=None, stt_recognizer=None, 
                 screen_capture=None, grpc_client=None, network_manager=None, 
                 hardware_id=None, input_handler=None, tray_controller=None, 
                 config: Optional[StateConfig] = None):
        self.console = console
        self.audio_player = audio_player
        self.stt_recognizer = stt_recognizer
        self.screen_capture = screen_capture
        self.grpc_client = grpc_client
        self.network_manager = network_manager
        self.hardware_id = hardware_id
        self.input_handler = input_handler
        self.tray_controller = tray_controller
        self.config = config or StateConfig()
        
        # –°–æ—Å—Ç–æ—è–Ω–∏–µ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è - —Ç–æ—á–Ω–æ –∫–∞–∫ –≤ main.py
        self.state = AppState.SLEEPING
        self.active_call = None
        self.streaming_task = None
        self.current_screenshot = None
        self.current_screen_info = None
        
        # –§–ª–∞–≥ –¥–ª—è fade-in –ø–µ—Ä–≤–æ–≥–æ –∞—É–¥–∏–æ —á–∞–Ω–∫–∞
        self._first_tts_chunk = True
        
        # –í—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è –¥–ª—è –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
        self.interrupt_start_time = time.time()
        
        # –ó–∞—â–∏—Ç–∞ –æ—Ç –¥—É–±–ª–∏—Ä–æ–≤–∞–Ω–∏—è –∫–æ–º–∞–Ω–¥
        self._last_command_time = 0
        self._command_debounce = 0.5  # 500ms –∑–∞—â–∏—Ç–∞ –æ—Ç –¥—É–±–ª–∏—Ä–æ–≤–∞–Ω–∏—è –∫–æ–º–∞–Ω–¥
        
        # –¶–µ–Ω—Ç—Ä–∞–ª–∏–∑–æ–≤–∞–Ω–Ω–æ–µ —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Å–æ—Å—Ç–æ—è–Ω–∏–µ–º –º–∏–∫—Ä–æ—Ñ–æ–Ω–∞
        self._microphone_state = {
            'is_recording': False,
            'last_start_time': 0,
            'last_stop_time': 0,
            'state_lock': threading.Lock()
        }
        
        # –ú–µ—Ç—Ä–∏–∫–∏
        self.metrics = StateMetrics()
        self.state_history: list[StateInfo] = []
        
        # Callbacks
        self.on_state_changed: Optional[Callable[[AppState, AppState, str], None]] = None
        self.on_error: Optional[Callable[[Exception, str], None]] = None
        self.on_recovery: Optional[Callable[[AppState], None]] = None
        
        # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è
        self._initialize_components()
        
        if self.console:
            self.console.print("[bold green]‚úÖ Simple State Manager –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω[/bold green]")
    
    def _initialize_components(self):
        """–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã"""
        try:
            # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º tray controller –µ—Å–ª–∏ –Ω–µ –ø–µ—Ä–µ–¥–∞–Ω
            if self.tray_controller is None:
                try:
                    from tray_controller import create_tray_controller, create_default_config
                    tray_config = create_default_config()
                    self.tray_controller = create_tray_controller(tray_config)
                    self._setup_tray_callbacks()
                except Exception as e:
                    if self.console:
                        self.console.print(f"[yellow]‚ö†Ô∏è Tray controller –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω: {e}[/yellow]")
                    self.tray_controller = None
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–æ–≤: {e}[/yellow]")
    
    def _setup_tray_callbacks(self):
        """–ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ—Ç callback'–∏ –¥–ª—è tray controller"""
        if self.tray_controller is None:
            return
        
        try:
            # Callback –¥–ª—è —Å—Ç–∞—Ç—É—Å–∞
            self.tray_controller.add_callback("status", self._on_tray_status)
            
            # Callback –¥–ª—è –Ω–∞—Å—Ç—Ä–æ–µ–∫
            self.tray_controller.add_callback("settings", self._on_tray_settings)
            
            # Callback –¥–ª—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏
            self.tray_controller.add_callback("about", self._on_tray_about)
            
            # Callback –¥–ª—è –≤—ã—Ö–æ–¥–∞
            self.tray_controller.add_callback("quit", self._on_tray_quit)
            
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –Ω–∞—Å—Ç—Ä–æ–π–∫–∏ tray callbacks: {e}[/yellow]")
    
    def _on_tray_status(self, data=None):
        """–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –Ω–∞ Status –≤ tray menu"""
        try:
            status = self.tray_controller.get_status() if self.tray_controller else {}
            if self.console:
                self.console.print(f"[blue]üìä Tray Status: {status}[/blue]")
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ tray status: {e}[/yellow]")
    
    def _on_tray_settings(self, data=None):
        """–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –Ω–∞ Settings –≤ tray menu"""
        try:
            if self.console:
                self.console.print("[blue]‚öôÔ∏è –ù–∞—Å—Ç—Ä–æ–π–∫–∏ (–ø–æ–∫–∞ –Ω–µ —Ä–µ–∞–ª–∏–∑–æ–≤–∞–Ω—ã)[/blue]")
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ tray settings: {e}[/yellow]")
    
    def _on_tray_about(self, data=None):
        """–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –Ω–∞ About –≤ tray menu"""
        try:
            if self.console:
                self.console.print("[blue]‚ÑπÔ∏è Nexy AI Voice Assistant v1.0[/blue]")
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ tray about: {e}[/yellow]")
    
    def _on_tray_quit(self, data=None):
        """–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –Ω–∞–∂–∞—Ç–∏–µ –Ω–∞ Quit –≤ tray menu"""
        try:
            if self.console:
                self.console.print("[yellow]üëã –í—ã—Ö–æ–¥ –ø–æ –∑–∞–ø—Ä–æ—Å—É –∏–∑ tray menu[/yellow]")
            # –ó–¥–µ—Å—å –º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –ª–æ–≥–∏–∫—É –¥–ª—è graceful shutdown
        except Exception as e:
            if self.console:
                self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ tray quit: {e}[/yellow]")
    
    def _write_tray_status_file(self, state_name: str):
        """–ó–∞–ø–∏—Å—ã–≤–∞–µ—Ç —Å—Ç–∞—Ç—É—Å –≤ —Ñ–∞–π–ª –¥–ª—è tray controller"""
        def write_async():
            try:
                import json
                path = self._get_status_file_path()
                with open(path, "w") as f:
                    json.dump({"state": state_name, "ts": time.time()}, f)
            except Exception:
                pass
        
        # –ó–∞–ø—É—Å–∫–∞–µ–º –≤ —Ñ–æ–Ω–µ
        threading.Thread(target=write_async, daemon=True).start()
    
    def _get_status_file_path(self):
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –ø—É—Ç—å –∫ —Ñ–∞–π–ª—É —Å—Ç–∞—Ç—É—Å–∞"""
        from pathlib import Path
        return Path.home() / "Library" / "Application Support" / "Nexy" / "tray_status.json"

    def _log_state_transition(self, from_state: AppState, to_state: AppState, reason: str = ""):
        """–õ–æ–≥–∏—Ä—É–µ—Ç –ø–µ—Ä–µ—Ö–æ–¥—ã –º–µ–∂–¥—É —Å–æ—Å—Ç–æ—è–Ω–∏—è–º–∏"""
        if self.console:
            self.console.print(f"[dim]üîÑ {from_state.name} ‚Üí {to_state.name}[/dim] {reason}")
        
        self._write_tray_status_file(to_state.name)
        
        # –°–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ–º —Å tray controller
        if self.tray_controller:
            try:
                from tray_controller import TrayState
                # –ú–∞–ø–ø–∏–Ω–≥ —Å–æ—Å—Ç–æ—è–Ω–∏–π AppState –Ω–∞ TrayState
                state_mapping = {
                    AppState.SLEEPING: TrayState.SLEEPING,
                    AppState.LISTENING: TrayState.LISTENING,
                    AppState.PROCESSING: TrayState.PROCESSING
                }
                
                tray_state = state_mapping.get(to_state, TrayState.SLEEPING)
                self.tray_controller.set_state(tray_state)
                
            except Exception as e:
                if self.console:
                    self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∞—Ü–∏–∏ —Å tray controller: {e}[/yellow]")
        
        # –ó–∞–ø–∏—Å—ã–≤–∞–µ–º –≤ –∏—Å—Ç–æ—Ä–∏—é
        state_info = StateInfo(
            state=to_state,
            timestamp=datetime.now(),
            duration=0.0,
            reason=reason
        )
        self.state_history.append(state_info)
        
        # –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º —Ä–∞–∑–º–µ—Ä –∏—Å—Ç–æ—Ä–∏–∏
        if len(self.state_history) > self.config.max_history_size:
            self.state_history.pop(0)
        
        # –û–±–Ω–æ–≤–ª—è–µ–º –º–µ—Ç—Ä–∏–∫–∏
        self.metrics.total_transitions += 1
        self.metrics.successful_transitions += 1
        self.metrics.last_transition_time = datetime.now()
        
        # –£–≤–µ–¥–æ–º–ª—è–µ–º callback
        if self.on_state_changed:
            try:
                self.on_state_changed(from_state, to_state, reason)
            except Exception as e:
                if self.console:
                    self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ callback —Å–æ—Å—Ç–æ—è–Ω–∏—è: {e}[/yellow]")

    def _can_start_listening(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –Ω–∞—á–∞—Ç—å –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏–µ"""
        return self.state == AppState.SLEEPING

    def _can_stop_listening(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –æ—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏–µ"""
        return self.state == AppState.LISTENING

    def _can_start_processing(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –Ω–∞—á–∞—Ç—å –æ–±—Ä–∞–±–æ—Ç–∫—É"""
        return self.state == AppState.LISTENING

    def _can_stop_processing(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –æ—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –æ–±—Ä–∞–±–æ—Ç–∫—É"""
        return self.state == AppState.PROCESSING

    def _can_sleep(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –ø–µ—Ä–µ–π—Ç–∏ –≤ —Ä–µ–∂–∏–º —Å–Ω–∞"""
        return self.state in [AppState.LISTENING, AppState.PROCESSING]

    def start_listening(self) -> bool:
        """–ù–∞—á–∏–Ω–∞–µ—Ç –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏–µ –∫–æ–º–∞–Ω–¥"""
        if not self._can_start_listening():
            return False
        
        self._log_state_transition(self.state, AppState.LISTENING, "(–ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –Ω–∞–∂–∞–ª –∫–Ω–æ–ø–∫—É)")
        self.state = AppState.LISTENING
        
        # –ó–∞–ø—É—Å–∫–∞–µ–º STT
        if self.stt_recognizer:
            self.stt_recognizer.start_recording_without_activation()
        
        return True

    def stop_listening(self) -> bool:
        """–û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏–µ –∫–æ–º–∞–Ω–¥ –∏ –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–Ω—ã–π —Ç–µ–∫—Å—Ç"""
        if not self._can_stop_listening():
            return False
        
        self._log_state_transition(self.state, AppState.SLEEPING, "(–ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –æ—Ç–ø—É—Å—Ç–∏–ª –∫–Ω–æ–ø–∫—É)")
        self.state = AppState.SLEEPING
        
        # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º STT –∏ –ø–æ–ª—É—á–∞–µ–º —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–Ω—ã–π —Ç–µ–∫—Å—Ç
        if self.stt_recognizer:
            future = self.stt_recognizer.stop_recording_and_recognize()
            if future:
                # –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ–µ –æ–∂–∏–¥–∞–Ω–∏–µ —Å —Ç–∞–π–º–∞—É—Ç–æ–º
                try:
                    recognized_text = future.result(timeout=10)  # 10 —Å–µ–∫—É–Ω–¥ —Ç–∞–π–º–∞—É—Ç
                except Exception as e:
                    if self.console:
                        self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ —Ä–∞—Å–ø–æ–∑–Ω–∞–≤–∞–Ω–∏—è: {e}[/yellow]")
                    recognized_text = None
            else:
                recognized_text = None
            
            # –ï—Å–ª–∏ —Ç–µ–∫—Å—Ç —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω, –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º –Ω–∞ —Å–µ—Ä–≤–µ—Ä
            if recognized_text and recognized_text.strip():
                if self.console:
                    self.console.print(f"[bold green]üé§ –†–∞—Å–ø–æ–∑–Ω–∞–Ω–æ: {recognized_text}[/bold green]")
                # –ó–∞–ø—É—Å–∫–∞–µ–º –æ–±—Ä–∞–±–æ—Ç–∫—É –∫–æ–º–∞–Ω–¥—ã –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ
                asyncio.create_task(self._process_command(recognized_text))
            else:
                if self.console:
                    self.console.print("[yellow]‚ö†Ô∏è –†–µ—á—å –Ω–µ —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–∞[/yellow]")
        
        return True

    async def _process_command(self, command: str):
        """–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–Ω—É—é –∫–æ–º–∞–Ω–¥—É - –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –Ω–∞ —Å–µ—Ä–≤–µ—Ä"""
        try:
            if self.console:
                self.console.print(f"[blue]üîÑ –û–±—Ä–∞–±–æ—Ç–∫–∞ –∫–æ–º–∞–Ω–¥—ã: {command}[/blue]")
            
            # –ü–µ—Ä–µ—Ö–æ–¥–∏–º –≤ —Å–æ—Å—Ç–æ—è–Ω–∏–µ –æ–±—Ä–∞–±–æ—Ç–∫–∏
            self._log_state_transition(self.state, AppState.PROCESSING, "(–∫–æ–º–∞–Ω–¥–∞ —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–∞)")
            self.state = AppState.PROCESSING
            
            # –°–æ–∑–¥–∞–µ–º –∑–∞–¥–∞—á—É –¥–ª—è –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
            self.streaming_task = asyncio.current_task()
            
            # –ü–æ–ª—É—á–∞–µ–º —Å–∫—Ä–∏–Ω—à–æ—Ç
            screenshot_data = None
            screen_info = None
            if self.screen_capture:
                try:
                    # –ó–∞—Ö–≤–∞—Ç —ç–∫—Ä–∞–Ω–∞ –≤ —Ñ–æ–Ω–æ–≤–æ–º –ø–æ—Ç–æ–∫–µ
                    screenshot_data = await asyncio.get_event_loop().run_in_executor(
                        None, self.screen_capture.capture_screen
                    )
                    if screenshot_data:
                        # –ü–æ–ª—É—á–∞–µ–º —Ä–µ–∞–ª—å–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± —ç–∫—Ä–∞–Ω–µ
                        screen_info_obj = self.screen_capture.get_screen_info()
                        screen_info = {
                            'width': screen_info_obj.width,
                            'height': screen_info_obj.height
                        }
                        if self.console:
                            self.console.print(f"[blue]üì∏ –°–∫—Ä–∏–Ω—à–æ—Ç –ø–æ–ª—É—á–µ–Ω: {screen_info.get('width', 0)}x{screen_info.get('height', 0)}[/blue]")
                except Exception as e:
                    if self.console:
                        self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –∑–∞—Ö–≤–∞—Ç–∞ —ç–∫—Ä–∞–Ω–∞: {e}[/yellow]")
            
            # –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –Ω–∞ —Å–µ—Ä–≤–µ—Ä —á–µ—Ä–µ–∑ gRPC
            if self.grpc_client:
                try:
                    if self.console:
                        self.console.print("[blue]üåê –û—Ç–ø—Ä–∞–≤–∫–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä...[/blue]")
                    
                    # –ó–∞–ø—É—Å–∫–∞–µ–º —Å—Ç—Ä–∏–º–∏–Ω–≥ —Å –æ–±—Ä–∞–±–æ—Ç–∫–æ–π –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
                    try:
                        async for response in self.grpc_client.stream_audio(
                            prompt=command,
                            screenshot_base64=screenshot_data,
                            screen_info=screen_info,
                            hardware_id=self.hardware_id
                        ):
                            # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –±—ã–ª–æ –ª–∏ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
                            if self.state != AppState.PROCESSING:
                                if self.console:
                                    self.console.print("[red]üõë –ü—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–æ, –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Å—Ç—Ä–∏–º[/red]")
                                break
                            
                            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –æ—Ç–≤–µ—Ç—ã –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞
                            if response.HasField("text_chunk"):
                                if self.console:
                                    self.console.print(f"[cyan]üìù {response.text_chunk}[/cyan]")
                            elif response.HasField("audio_chunk"):
                                # –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∞—É–¥–∏–æ
                                if self.audio_player:
                                    # –ó–∞–ø—É—Å–∫–∞–µ–º –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ, –µ—Å–ª–∏ –µ—â–µ –Ω–µ –∑–∞–ø—É—â–µ–Ω–æ
                                    if not self.audio_player._is_playing:
                                        self.audio_player.start_playback()
                                    # –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º bytes –≤ numpy array
                                    import numpy as np
                                    audio_data = np.frombuffer(response.audio_chunk.audio_data, dtype=np.int16)
                                    
                                    # –£–ú–ù–ê–Ø –ê–î–ê–ü–¢–ê–¶–ò–Ø: –û–ø—Ä–µ–¥–µ–ª—è–µ–º –æ–ø—Ç–∏–º–∞–ª—å–Ω—ã–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–ª—è —Ç–µ–∫—É—â–µ–≥–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞
                                    current_device_info = getattr(self.audio_player, 'current_device_info', None)
                                    current_device = current_device_info.name if current_device_info else 'default'
                                    
                                    # –ü—Ä–æ—Å—Ç–∞—è –∞–¥–∞–ø—Ç–∞—Ü–∏—è —á–∞—Å—Ç–æ—Ç—ã
                                    if hasattr(self.audio_player, 'sample_rate') and self.audio_player.sample_rate != 44100:
                                        # –ü—Ä–æ—Å—Ç–æ–π —Ä–µ—Å—ç–º–ø–ª–∏–Ω–≥
                                        ratio = 44100 / self.audio_player.sample_rate
                                        target_length = int(len(audio_data) * ratio)
                                        if ratio > 1:
                                            indices = np.linspace(0, len(audio_data) - 1, target_length, dtype=int)
                                            audio_data = audio_data[indices]
                                        else:
                                            step = int(1 / ratio)
                                            audio_data = audio_data[::step]
                                    
                                    self.audio_player.add_audio_data(audio_data)
                            elif response.HasField("end_message"):
                                if self.console:
                                    self.console.print(f"[green]‚úÖ {response.end_message}[/green]")
                                break
                            elif response.HasField("error_message"):
                                if self.console:
                                    self.console.print(f"[red]‚ùå {response.error_message}[/red]")
                                break
                    
                        if self.console:
                            self.console.print("[green]‚úÖ –ö–æ–º–∞–Ω–¥–∞ –æ–±—Ä–∞–±–æ—Ç–∞–Ω–∞[/green]")
                    
                    except asyncio.CancelledError:
                        if self.console:
                            self.console.print("[red]üõë gRPC —Å—Ç—Ä–∏–º –ø—Ä–µ—Ä–≤–∞–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º[/red]")
                        raise
                    except Exception as e:
                        if self.console:
                            self.console.print(f"[red]‚ùå –û—à–∏–±–∫–∞ gRPC —Å—Ç—Ä–∏–º–∞: {e}[/red]")
                    finally:
                        # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ –ø–æ—Å–ª–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è —Å—Ç—Ä–∏–º–∞
                        if self.audio_player and self.audio_player._is_playing:
                            self.audio_player.stop_playback()
                    
                except Exception as e:
                    if self.console:
                        self.console.print(f"[red]‚ùå –û—à–∏–±–∫–∞ –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–∞ —Å–µ—Ä–≤–µ—Ä: {e}[/red]")
            else:
                if self.console:
                    self.console.print("[yellow]‚ö†Ô∏è gRPC –∫–ª–∏–µ–Ω—Ç –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω[/yellow]")
            
        except Exception as e:
            if self.console:
                self.console.print(f"[red]‚ùå –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∫–æ–º–∞–Ω–¥—ã: {e}[/red]")
        finally:
            # –í–æ–∑–≤—Ä–∞—â–∞–µ–º—Å—è –≤ —Å–æ—Å—Ç–æ—è–Ω–∏–µ —Å–Ω–∞
            self._log_state_transition(self.state, AppState.SLEEPING, "(–æ–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞)")
            self.state = AppState.SLEEPING

    def start_processing(self) -> bool:
        """–ù–∞—á–∏–Ω–∞–µ—Ç –æ–±—Ä–∞–±–æ—Ç–∫—É –∫–æ–º–∞–Ω–¥—ã"""
        if not self._can_start_processing():
            return False
        
        self._log_state_transition(self.state, AppState.PROCESSING, "(–∫–æ–º–∞–Ω–¥–∞ —Ä–∞—Å–ø–æ–∑–Ω–∞–Ω–∞)")
        self.state = AppState.PROCESSING
        
        # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º STT
        if self.stt_recognizer:
            future = self.stt_recognizer.stop_recording_and_recognize()
            if future:
                # –ù–µ –∂–¥–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç, –ø—Ä–æ—Å—Ç–æ –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–∞–ø–∏—Å—å
                pass
        
        return True

    def stop_processing(self) -> bool:
        """–ó–∞–≤–µ—Ä—à–∞–µ—Ç –æ–±—Ä–∞–±–æ—Ç–∫—É –∫–æ–º–∞–Ω–¥—ã"""
        if not self._can_stop_processing():
            return False
        
        self._log_state_transition(self.state, AppState.SLEEPING, "(–æ–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞)")
        self.state = AppState.SLEEPING
        
        return True

    def sleep(self) -> bool:
        """–ü–µ—Ä–µ–≤–æ–¥–∏—Ç –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –≤ —Ä–µ–∂–∏–º —Å–Ω–∞"""
        if not self._can_sleep():
            return False
        
        self._log_state_transition(self.state, AppState.SLEEPING, "(–ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω—ã–π —Å–æ–Ω)")
        self.state = AppState.SLEEPING
        
        # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º STT
        if self.stt_recognizer:
            future = self.stt_recognizer.stop_recording_and_recognize()
            if future:
                # –ù–µ –∂–¥–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç, –ø—Ä–æ—Å—Ç–æ –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–∞–ø–∏—Å—å
                pass
        
        # –ü–†–ï–†–´–í–ê–ï–ú –ê–£–î–ò–û –í–û–°–ü–†–û–ò–ó–í–ï–î–ï–ù–ò–ï
        if self.audio_player:
            try:
                self.audio_player.stop_playback()
                if self.console:
                    self.console.print("[red]üîá –ê—É–¥–∏–æ –ø—Ä–µ—Ä–≤–∞–Ω–æ[/red]")
            except Exception as e:
                if self.console:
                    self.console.print(f"[yellow]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –∞—É–¥–∏–æ: {e}[/yellow]")
        
        # –ü–†–ï–†–´–í–ê–ï–ú gRPC –°–¢–†–ò–ú
        if self.streaming_task and not self.streaming_task.done():
            self.streaming_task.cancel()
            if self.console:
                self.console.print("[red]üîá gRPC —Å—Ç—Ä–∏–º –ø—Ä–µ—Ä–≤–∞–Ω[/red]")
        
        return True

    def get_state_name(self) -> str:
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –Ω–∞–∑–≤–∞–Ω–∏–µ —Ç–µ–∫—É—â–µ–≥–æ —Å–æ—Å—Ç–æ—è–Ω–∏—è"""
        return self.state.name

    def is_listening(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –ª–∏ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –≤ —Ä–µ–∂–∏–º–µ –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏—è"""
        return self.state == AppState.LISTENING

    def is_processing(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –ª–∏ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –≤ —Ä–µ–∂–∏–º–µ –æ–±—Ä–∞–±–æ—Ç–∫–∏"""
        return self.state == AppState.PROCESSING

    def is_sleeping(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –ª–∏ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –≤ —Ä–µ–∂–∏–º–µ —Å–Ω–∞"""
        return self.state == AppState.SLEEPING

    def activate_microphone(self) -> bool:
        """–ê–ª–∏–∞—Å –¥–ª—è start_listening() - —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç—å —Å STT"""
        return self.start_listening()

    def deactivate_microphone(self) -> bool:
        """–ê–ª–∏–∞—Å –¥–ª—è stop_listening() - —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç—å —Å STT"""
        return self.stop_listening()

    def is_microphone_recording(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –∑–∞–ø–∏—Å—ã–≤–∞–µ—Ç—Å—è –ª–∏ –º–∏–∫—Ä–æ—Ñ–æ–Ω"""
        return self.state == AppState.LISTENING

    def can_start_recording(self) -> bool:
        """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, –º–æ–∂–Ω–æ –ª–∏ –Ω–∞—á–∞—Ç—å –∑–∞–ø–∏—Å—å"""
        return self._can_start_listening()

    def get_metrics(self) -> StateMetrics:
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –º–µ—Ç—Ä–∏–∫–∏ —Å–æ—Å—Ç–æ—è–Ω–∏–π"""
        return self.metrics

    def get_state_history(self, limit: int = 10) -> list[StateInfo]:
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –∏—Å—Ç–æ—Ä–∏—é —Å–æ—Å—Ç–æ—è–Ω–∏–π"""
        return self.state_history[-limit:] if limit > 0 else self.state_history

    def set_state_changed_callback(self, callback: Callable[[AppState, AppState, str], None]):
        """–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç callback –¥–ª—è –∏–∑–º–µ–Ω–µ–Ω–∏–π —Å–æ—Å—Ç–æ—è–Ω–∏—è"""
        self.on_state_changed = callback

    def set_error_callback(self, callback: Callable[[Exception, str], None]):
        """–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç callback –¥–ª—è –æ—à–∏–±–æ–∫"""
        self.on_error = callback

    def set_recovery_callback(self, callback: Callable[[AppState], None]):
        """–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç callback –¥–ª—è –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∏—è"""
        self.on_recovery = callback

    def cleanup(self):
        """–û—á–∏—Å—Ç–∫–∞ —Ä–µ—Å—É—Ä—Å–æ–≤ –ø—Ä–∏ –≤—ã—Ö–æ–¥–µ"""
        try:
            # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º STT
            if self.stt_recognizer:
                future = self.stt_recognizer.stop_recording_and_recognize()
                if future:
                    # –ù–µ –∂–¥–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç, –ø—Ä–æ—Å—Ç–æ –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–∞–ø–∏—Å—å
                    pass
            
            # –û—á–∏—â–∞–µ–º –¥—Ä—É–≥–∏–µ —Ä–µ—Å—É—Ä—Å—ã
            if self.audio_player:
                self.audio_player.shutdown()
            
            if self.console:
                self.console.print("[dim]üßπ –†–µ—Å—É—Ä—Å—ã –æ—á–∏—â–µ–Ω—ã[/dim]")
        except Exception as e:
            if self.console:
                self.console.print(f"[dim]‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ—á–∏—Å—Ç–∫–∏ —Ä–µ—Å—É—Ä—Å–æ–≤: {e}[/dim]")


def create_simple_state_manager(console=None, audio_player=None, stt_recognizer=None, 
                               screen_capture=None, grpc_client=None, network_manager=None, 
                               hardware_id=None, input_handler=None, tray_controller=None, 
                               config: Optional[StateConfig] = None) -> SimpleStateManager:
    """–°–æ–∑–¥–∞–µ—Ç —ç–∫–∑–µ–º–ø–ª—è—Ä SimpleStateManager"""
    return SimpleStateManager(
        console=console,
        audio_player=audio_player,
        stt_recognizer=stt_recognizer,
        screen_capture=screen_capture,
        grpc_client=grpc_client,
        network_manager=network_manager,
        hardware_id=hardware_id,
        input_handler=input_handler,
        tray_controller=tray_controller,
        config=config
    )
