"""
–û—Å–Ω–æ–≤–Ω–æ–π –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç–æ—Ä gRPC Service Module

–ò–Ω—Ç–µ–≥—Ä–∏—Ä—É–µ—Ç –≤—Å–µ –º–æ–¥—É–ª–∏ —á–µ—Ä–µ–∑ —É–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π —Å—Ç–∞–Ω–¥–∞—Ä—Ç –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏—è
"""

import asyncio
import logging
from typing import Dict, Any, Optional, AsyncGenerator, List
from datetime import datetime

import sys
import os
sys.path.append(os.path.join(os.path.dirname(__file__), '../../../'))

from integrations.core.universal_module_interface import UniversalModuleInterface, ModuleStatus
from integrations.core.universal_grpc_integration import UniversalGrpcIntegration
from modules.grpc_service.config import GrpcServiceConfig

logger = logging.getLogger(__name__)

class GrpcServiceManager(UniversalModuleInterface):
    """
    –û—Å–Ω–æ–≤–Ω–æ–π –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç–æ—Ä gRPC —Å–µ—Ä–≤–∏—Å–∞
    
    –£–ø—Ä–∞–≤–ª—è–µ—Ç –≤—Å–µ–º–∏ –º–æ–¥—É–ª—è–º–∏ —á–µ—Ä–µ–∑ —É–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π —Å—Ç–∞–Ω–¥–∞—Ä—Ç –≤–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤–∏—è
    """
    
    def __init__(self, config: Optional[GrpcServiceConfig] = None):
        """
        –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ gRPC —Å–µ—Ä–≤–∏—Å–∞
        
        Args:
            config: –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è gRPC —Å–µ—Ä–≤–∏—Å–∞
        """
        # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –±–∞–∑–æ–≤—ã–π –∫–ª–∞—Å—Å
        config_dict = config.__dict__ if config else {}
        super().__init__("grpc_service", config_dict)
        
        self.config = config or GrpcServiceConfig()
        self.modules: Dict[str, UniversalModuleInterface] = {}
        self.integrations: Dict[str, UniversalGrpcIntegration] = {}
        self.active_sessions: Dict[str, Dict[str, Any]] = {}
        self.global_interrupt_flag = False
        self.interrupt_hardware_id: Optional[str] = None
        
        logger.info("gRPC Service Manager created")
    
    async def initialize(self) -> bool:
        """
        –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –≤—Å–µ—Ö –º–æ–¥—É–ª–µ–π –∏ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π
        
        Returns:
            True –µ—Å–ª–∏ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è —É—Å–ø–µ—à–Ω–∞, False –∏–Ω–∞—á–µ
        """
        try:
            logger.info("Initializing gRPC Service Manager...")
            
            # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –≤—Å–µ –º–æ–¥—É–ª–∏
            await self._initialize_modules()
            
            # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –≤—Å–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            await self._initialize_integrations()
            
            # –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ñ–ª–∞–≥ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ –∏ —Å—Ç–∞—Ç—É—Å
            self.is_initialized = True
            self.set_status(ModuleStatus.READY)
            
            logger.info("gRPC Service Manager initialized successfully")
            return True
            
        except Exception as e:
            logger.error(f"Failed to initialize gRPC Service Manager: {e}")
            return False
    
    async def _initialize_modules(self):
        """–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –≤—Å–µ—Ö –º–æ–¥—É–ª–µ–π"""
        # –ò–º–ø–æ—Ä—Ç–∏—Ä—É–µ–º –∏ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –º–æ–¥—É–ª–∏
        try:
            # Text Processing Module
            if self.config.is_module_enabled("text_processing"):
                from modules.text_processing import TextProcessor
                text_processor = TextProcessor()
                await text_processor.initialize()
                self.modules["text_processing"] = text_processor
                logger.info("Text Processing Module initialized")
            
            # Audio Generation Module
            if self.config.is_module_enabled("audio_generation"):
                from modules.audio_generation import AudioProcessor
                audio_processor = AudioProcessor()
                await audio_processor.initialize()
                self.modules["audio_generation"] = audio_processor
                logger.info("Audio Generation Module initialized")
            
            # Session Management Module
            if self.config.is_module_enabled("session_management"):
                from modules.session_management import SessionManager
                session_manager = SessionManager()
                await session_manager.initialize()
                self.modules["session_management"] = session_manager
                logger.info("Session Management Module initialized")
            
            # Database Module
            if self.config.is_module_enabled("database"):
                from modules.database import DatabaseManager
                database_manager = DatabaseManager()
                await database_manager.initialize()
                self.modules["database"] = database_manager
                logger.info("Database Module initialized")
            
            # Memory Management Module
            if self.config.is_module_enabled("memory_management"):
                from modules.memory_management import MemoryManager
                memory_manager = MemoryManager()
                await memory_manager.initialize()
                self.modules["memory_management"] = memory_manager
                logger.info("Memory Management Module initialized")
                
        except Exception as e:
            logger.error(f"Failed to initialize modules: {e}")
            raise
    
    async def _initialize_integrations(self):
        """–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –≤—Å–µ—Ö –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π"""
        try:
            # –°–æ–∑–¥–∞–µ–º –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –¥–ª—è –∫–∞–∂–¥–æ–≥–æ –º–æ–¥—É–ª—è
            for module_name, module in self.modules.items():
                integration = await self._create_integration(module_name, module)
                if integration:
                    await integration.initialize()
                    self.integrations[module_name] = integration
                    logger.info(f"Integration for {module_name} initialized")
                    
        except Exception as e:
            logger.error(f"Failed to initialize integrations: {e}")
            raise
    
    async def _create_integration(self, module_name: str, module: UniversalModuleInterface) -> Optional[UniversalGrpcIntegration]:
        """–°–æ–∑–¥–∞–Ω–∏–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –¥–ª—è –º–æ–¥—É–ª—è"""
        try:
            if module_name == "text_processing":
                from integrations.grpc_integrations.text_processing_integration import TextProcessingIntegration
                return TextProcessingIntegration(module_name, module)
            elif module_name == "audio_generation":
                from integrations.grpc_integrations.audio_generation_integration import AudioGenerationIntegration
                return AudioGenerationIntegration(module_name, module)
            elif module_name == "session_management":
                from integrations.grpc_integrations.session_management_integration import SessionManagementIntegration
                return SessionManagementIntegration(module_name, module)
            elif module_name == "database":
                from integrations.grpc_integrations.database_integration import DatabaseIntegration
                return DatabaseIntegration(module_name, module)
            elif module_name == "memory_management":
                from integrations.grpc_integrations.memory_management_integration import MemoryManagementIntegration
                return MemoryManagementIntegration(module_name, module)
            else:
                logger.warning(f"No integration found for module: {module_name}")
                return None
                
        except Exception as e:
            logger.error(f"Failed to create integration for {module_name}: {e}")
            return None
    
    async def process_stream_request(self, request_data: Dict[str, Any]) -> AsyncGenerator[Dict[str, Any], None]:
        """
        –û–±—Ä–∞–±–æ—Ç–∫–∞ StreamRequest —á–µ—Ä–µ–∑ –≤—Å–µ –º–æ–¥—É–ª–∏
        
        Args:
            request_data: –î–∞–Ω–Ω—ã–µ –∑–∞–ø—Ä–æ—Å–∞
            
        Yields:
            –†–µ–∑—É–ª—å—Ç–∞—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏
        """
        session_id = request_data.get("session_id", "unknown")
        hardware_id = request_data.get("hardware_id", "unknown")
        
        try:
            # –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º —Å–µ—Å—Å–∏—é
            await self._register_session(session_id, hardware_id, request_data)
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —á–µ—Ä–µ–∑ Text Processing
            if "text_processing" in self.integrations:
                async for result in self.integrations["text_processing"].process_request(request_data):
                    if self._should_interrupt(hardware_id):
                        break
                    yield result
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —á–µ—Ä–µ–∑ Audio Generation
            if "audio_generation" in self.integrations:
                async for result in self.integrations["audio_generation"].process_request(request_data):
                    if self._should_interrupt(hardware_id):
                        break
                    yield result
            
            # –û–±–Ω–æ–≤–ª—è–µ–º –ø–∞–º—è—Ç—å –≤ —Ñ–æ–Ω–µ
            if "memory_management" in self.integrations:
                asyncio.create_task(
                    self._update_memory_background(hardware_id, request_data)
                )
                
        except Exception as e:
            logger.error(f"Error processing stream request: {e}")
            yield {"error": str(e)}
        finally:
            # –û—á–∏—â–∞–µ–º —Å–µ—Å—Å–∏—é
            await self._cleanup_session(session_id)
    
    async def interrupt_session(self, hardware_id: str) -> Dict[str, Any]:
        """
        –ü—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ —Å–µ—Å—Å–∏–∏ –¥–ª—è —É–∫–∞–∑–∞–Ω–Ω–æ–≥–æ hardware_id
        
        Args:
            hardware_id: ID –æ–±–æ—Ä—É–¥–æ–≤–∞–Ω–∏—è –¥–ª—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
            
        Returns:
            –†–µ–∑—É–ª—å—Ç–∞—Ç –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
        """
        try:
            logger.warning(f"Interrupting session for hardware_id: {hardware_id}")
            
            # –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≥–ª–æ–±–∞–ª—å–Ω—ã–π —Ñ–ª–∞–≥ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
            self.global_interrupt_flag = True
            self.interrupt_hardware_id = hardware_id
            
            # –ü—Ä–µ—Ä—ã–≤–∞–µ–º –≤—Å–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            interrupted_sessions = []
            for integration_name, integration in self.integrations.items():
                try:
                    success = await integration.interrupt(hardware_id)
                    if success:
                        interrupted_sessions.append(integration_name)
                except Exception as e:
                    logger.error(f"Error interrupting {integration_name}: {e}")
            
            # –û—á–∏—â–∞–µ–º –∞–∫—Ç–∏–≤–Ω—ã–µ —Å–µ—Å—Å–∏–∏ –¥–ª—è —ç—Ç–æ–≥–æ hardware_id
            sessions_to_remove = [
                session_id for session_id, session_data in self.active_sessions.items()
                if session_data.get("hardware_id") == hardware_id
            ]
            
            for session_id in sessions_to_remove:
                await self._cleanup_session(session_id)
            
            return {
                "success": True,
                "interrupted_sessions": interrupted_sessions,
                "message": f"Session interrupted for hardware_id: {hardware_id}"
            }
            
        except Exception as e:
            logger.error(f"Error interrupting session: {e}")
            return {
                "success": False,
                "interrupted_sessions": [],
                "message": f"Error interrupting session: {e}"
            }
    
    async def _register_session(self, session_id: str, hardware_id: str, request_data: Dict[str, Any]):
        """–†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –∞–∫—Ç–∏–≤–Ω–æ–π —Å–µ—Å—Å–∏–∏"""
        self.active_sessions[session_id] = {
            "hardware_id": hardware_id,
            "start_time": datetime.now(),
            "request_data": request_data
        }
        logger.info(f"Session {session_id} registered for hardware_id: {hardware_id}")
    
    async def _cleanup_session(self, session_id: str):
        """–û—á–∏—Å—Ç–∫–∞ —Å–µ—Å—Å–∏–∏"""
        if session_id in self.active_sessions:
            del self.active_sessions[session_id]
            logger.info(f"Session {session_id} cleaned up")
    
    async def _update_memory_background(self, hardware_id: str, request_data: Dict[str, Any]):
        """–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–∞–º—è—Ç–∏ –≤ —Ñ–æ–Ω–æ–≤–æ–º —Ä–µ–∂–∏–º–µ"""
        try:
            if "memory_management" in self.integrations:
                # –ó–¥–µ—Å—å –º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –ª–æ–≥–∏–∫—É –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –ø–∞–º—è—Ç–∏
                pass
        except Exception as e:
            logger.error(f"Error updating memory in background: {e}")
    
    def _should_interrupt(self, hardware_id: str) -> bool:
        """–ü—Ä–æ–≤–µ—Ä–∫–∞, –Ω—É–∂–Ω–æ –ª–∏ –ø—Ä–µ—Ä—ã–≤–∞—Ç—å –æ–±—Ä–∞–±–æ—Ç–∫—É"""
        return (
            self.global_interrupt_flag and 
            self.interrupt_hardware_id == hardware_id
        )
    
    def get_status(self) -> Dict[str, Any]:
        """–ü–æ–ª—É—á–µ–Ω–∏–µ —Å—Ç–∞—Ç—É—Å–∞ gRPC —Å–µ—Ä–≤–∏—Å–∞"""
        modules_status = {}
        for name, module in self.modules.items():
            if hasattr(module, 'get_status'):
                try:
                    modules_status[name] = module.get_status()
                except Exception as e:
                    modules_status[name] = f"error: {str(e)}"
            else:
                modules_status[name] = "initialized"
        
        integrations_status = {}
        for name, integration in self.integrations.items():
            if hasattr(integration, 'get_status'):
                try:
                    integrations_status[name] = integration.get_status()
                except Exception as e:
                    integrations_status[name] = f"error: {str(e)}"
            else:
                integrations_status[name] = "initialized"
        
        return {
            "status": "ready" if self.is_initialized else "not_initialized",
            "active_sessions": len(self.active_sessions),
            "modules": modules_status,
            "integrations": integrations_status,
            "global_interrupt_flag": self.global_interrupt_flag,
            "interrupt_hardware_id": self.interrupt_hardware_id
        }
    
    async def start(self) -> bool:
        """–ó–∞–ø—É—Å–∫ gRPC —Å–µ—Ä–≤–∏—Å–∞"""
        try:
            logger.info("Starting gRPC Service Manager...")
            
            # –ó–∞–ø—É—Å–∫–∞–µ–º –≤—Å–µ –º–æ–¥—É–ª–∏
            for name, module in self.modules.items():
                if hasattr(module, 'start'):
                    await module.start()
                    logger.info(f"Module {name} started successfully")
            
            # –ó–∞–ø—É—Å–∫–∞–µ–º –≤—Å–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            for name, integration in self.integrations.items():
                if hasattr(integration, 'start'):
                    await integration.start()
                    logger.info(f"Integration {name} started successfully")
            
            logger.info("gRPC Service Manager started successfully")
            return True
            
        except Exception as e:
            logger.error(f"Error starting gRPC Service Manager: {e}")
            return False
    
    async def stop(self) -> bool:
        """–û—Å—Ç–∞–Ω–æ–≤–∫–∞ gRPC —Å–µ—Ä–≤–∏—Å–∞"""
        try:
            logger.info("Stopping gRPC Service Manager...")
            
            # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤—Å–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            for name, integration in self.integrations.items():
                if hasattr(integration, 'stop'):
                    await integration.stop()
                    logger.info(f"Integration {name} stopped successfully")
            
            # –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤—Å–µ –º–æ–¥—É–ª–∏
            for name, module in self.modules.items():
                if hasattr(module, 'stop'):
                    await module.stop()
                    logger.info(f"Module {name} stopped successfully")
            
            # –û—á–∏—â–∞–µ–º –∞–∫—Ç–∏–≤–Ω—ã–µ —Å–µ—Å—Å–∏–∏
            self.active_sessions.clear()
            
            logger.info("gRPC Service Manager stopped successfully")
            return True
            
        except Exception as e:
            logger.error(f"Error stopping gRPC Service Manager: {e}")
            return False
    
    async def process(self, input_data: Dict[str, Any]) -> AsyncGenerator[Dict[str, Any], None]:
        """
        –û—Å–Ω–æ–≤–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –¥–∞–Ω–Ω—ã—Ö —á–µ—Ä–µ–∑ gRPC —Å–µ—Ä–≤–∏—Å
        
        Args:
            input_data: –í—Ö–æ–¥–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ –¥–ª—è –æ–±—Ä–∞–±–æ—Ç–∫–∏
            
        Yields:
            –†–µ–∑—É–ª—å—Ç–∞—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏
        """
        try:
            self.set_status(ModuleStatus.PROCESSING)
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –∑–∞–ø—Ä–æ—Å —á–µ—Ä–µ–∑ process_request
            result = await self.process_request(input_data)
            
            yield result
            
        except Exception as e:
            logger.error(f"Error in gRPC Service Manager process: {e}")
            yield {
                'success': False,
                'text_response': '',
                'audio_chunks': [],
                'error': str(e)
            }
        finally:
            self.set_status(ModuleStatus.READY)

    async def process_request(self, request_data: Dict[str, Any]) -> Dict[str, Any]:
        """
        –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ —á–µ—Ä–µ–∑ –≤—Å–µ –º–æ–¥—É–ª–∏
        
        Args:
            request_data: –î–∞–Ω–Ω—ã–µ –∑–∞–ø—Ä–æ—Å–∞ (hardware_id, text, screenshot, session_id, interrupt_flag)
            
        Returns:
            –†–µ–∑—É–ª—å—Ç–∞—Ç –æ–±—Ä–∞–±–æ—Ç–∫–∏ (success, text_response, audio_chunks, error)
        """
        try:
            session_id = request_data.get('session_id', 'unknown')
            hardware_id = request_data.get('hardware_id', 'unknown')
            text = request_data.get('text', '')
            screenshot = request_data.get('screenshot', b'')
            
            logger.info(f"üîÑ –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ {session_id} —á–µ—Ä–µ–∑ –º–æ–¥—É–ª–∏...")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ
            if request_data.get('interrupt_flag', False):
                logger.info(f"üõë –ó–∞–ø—Ä–æ—Å –Ω–∞ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ –¥–ª—è {session_id}")
                return {
                    'success': True,
                    'text_response': '–°–µ—Å—Å–∏—è –ø—Ä–µ—Ä–≤–∞–Ω–∞',
                    'audio_chunks': [],
                    'error': ''
                }
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —Ç–µ–∫—Å—Ç —á–µ—Ä–µ–∑ Text Processing –º–æ–¥—É–ª—å
            text_result = None
            if text and 'text_processing' in self.modules:
                try:
                    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –º–µ—Ç–æ–¥ process_text
                    if hasattr(self.modules['text_processing'], 'process_text'):
                        # TextProcessor.process_text –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç async generator
                        text_generator = self.modules['text_processing'].process_text(text)
                        # –ü–æ–ª—É—á–∞–µ–º –ø–µ—Ä–≤—ã–π —Ä–µ–∑—É–ª—å—Ç–∞—Ç –∏–∑ –≥–µ–Ω–µ—Ä–∞—Ç–æ—Ä–∞
                        text_result = await text_generator.__anext__()
                        logger.info(f"‚úÖ –¢–µ–∫—Å—Ç –æ–±—Ä–∞–±–æ—Ç–∞–Ω –¥–ª—è {session_id}")
                    else:
                        logger.warning(f"‚ö†Ô∏è TextProcessor –Ω–µ –∏–º–µ–µ—Ç –º–µ—Ç–æ–¥–∞ process_text")
                        text_result = f"TextProcessor –Ω–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω"
                except Exception as e:
                    logger.warning(f"‚ö†Ô∏è –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ —Ç–µ–∫—Å—Ç–∞: {e}")
                    text_result = f"–û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ —Ç–µ–∫—Å—Ç–∞: {str(e)}"
            
            # –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º –∞—É–¥–∏–æ —á–µ—Ä–µ–∑ Audio Generation –º–æ–¥—É–ª—å
            audio_chunks = []
            if text_result and 'audio_generation' in self.modules:
                try:
                    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –º–µ—Ç–æ–¥ generate_audio
                    if hasattr(self.modules['audio_generation'], 'generate_audio'):
                        audio_result = await self.modules['audio_generation'].generate_audio(text_result)
                        if audio_result:
                            audio_chunks = [audio_result]
                        logger.info(f"‚úÖ –ê—É–¥–∏–æ —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–æ –¥–ª—è {session_id}")
                    else:
                        logger.warning(f"‚ö†Ô∏è AudioProcessor –Ω–µ –∏–º–µ–µ—Ç –º–µ—Ç–æ–¥–∞ generate_audio")
                except Exception as e:
                    logger.warning(f"‚ö†Ô∏è –û—à–∏–±–∫–∞ –≥–µ–Ω–µ—Ä–∞—Ü–∏–∏ –∞—É–¥–∏–æ: {e}")
            
            # –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –ø–∞–º—è—Ç—å —á–µ—Ä–µ–∑ Memory Management –º–æ–¥—É–ª—å
            if text_result and 'memory_management' in self.modules:
                try:
                    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –º–µ—Ç–æ–¥ store_memory
                    if hasattr(self.modules['memory_management'], 'store_memory'):
                        await self.modules['memory_management'].store_memory(
                            hardware_id=hardware_id,
                            content=text_result,
                            memory_type='conversation'
                        )
                        logger.info(f"‚úÖ –ü–∞–º—è—Ç—å —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∞ –¥–ª—è {session_id}")
                    else:
                        logger.warning(f"‚ö†Ô∏è MemoryManager –Ω–µ –∏–º–µ–µ—Ç –º–µ—Ç–æ–¥–∞ store_memory")
                except Exception as e:
                    logger.warning(f"‚ö†Ô∏è –û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –ø–∞–º—è—Ç–∏: {e}")
            
            # –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö —á–µ—Ä–µ–∑ Database –º–æ–¥—É–ª—å
            if text_result and 'database' in self.modules:
                try:
                    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –º–µ—Ç–æ–¥ store_conversation
                    if hasattr(self.modules['database'], 'store_conversation'):
                        await self.modules['database'].store_conversation(
                            hardware_id=hardware_id,
                            session_id=session_id,
                            user_input=text,
                            ai_response=text_result
                        )
                        logger.info(f"‚úÖ –î–∞–Ω–Ω—ã–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã –≤ –ë–î –¥–ª—è {session_id}")
                    else:
                        logger.warning(f"‚ö†Ô∏è DatabaseManager –Ω–µ –∏–º–µ–µ—Ç –º–µ—Ç–æ–¥–∞ store_conversation")
                except Exception as e:
                    logger.warning(f"‚ö†Ô∏è –û—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –≤ –ë–î: {e}")
            
            logger.info(f"‚úÖ –ó–∞–ø—Ä–æ—Å {session_id} —É—Å–ø–µ—à–Ω–æ –æ–±—Ä–∞–±–æ—Ç–∞–Ω")
            
            return {
                'success': True,
                'text_response': text_result or '–û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞',
                'audio_chunks': audio_chunks,
                'error': ''
            }
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∑–∞–ø—Ä–æ—Å–∞: {e}")
            return {
                'success': False,
                'text_response': '',
                'audio_chunks': [],
                'error': str(e)
            }

    async def cleanup(self) -> bool:
        """–û—á–∏—Å—Ç–∫–∞ –≤—Å–µ—Ö —Ä–µ—Å—É—Ä—Å–æ–≤"""
        try:
            logger.info("Cleaning up gRPC Service Manager...")
            
            # –û—á–∏—â–∞–µ–º –≤—Å–µ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
            for integration in self.integrations.values():
                if hasattr(integration, 'cleanup'):
                    await integration.cleanup()
            
            # –û—á–∏—â–∞–µ–º –≤—Å–µ –º–æ–¥—É–ª–∏
            for module in self.modules.values():
                if hasattr(module, 'cleanup'):
                    await module.cleanup()
            
            # –û—á–∏—â–∞–µ–º –∞–∫—Ç–∏–≤–Ω—ã–µ —Å–µ—Å—Å–∏–∏
            self.active_sessions.clear()
            
            logger.info("gRPC Service Manager cleaned up successfully")
            return True
            
        except Exception as e:
            logger.error(f"Error cleaning up gRPC Service Manager: {e}")
            return False
